--- a/pizza_order_system.ipynb
+++ b/pizza_order_system.ipynb
@@ -383,7 +383,7 @@
             "11 13 15\n",
             "\n",
             "Total Cost:  109\n",
-            "İsminiz: talha bacak\n",
+            "İsminiz: jason ceys\n",
             "TC Kimlik Numaranız: 123091241\n",
             "Kredi Kartı Numaranız: 128412049\n",
             "Kredi Kartı Şifreniz: 410289124\n",
